Fixed a vertical alignment issue for formFor help icon

--- a/styles/field-label.styl
+++ b/styles/field-label.styl
@@ -10,13 +10,10 @@
 
   .help-background-icon,
   .help-foreground-icon {
-    line-height: 20px;
-    width: 20px;
     text-align: center;
   }
 
   .help-background-icon {
-    font-size: 20px;
     color: $color-fill-5;
   }
   .help-foreground-icon {
